include/gqlite-c.h

#pragma once

#ifdef __cplusplus
extern "C" {
#endif

typedef struct gqlite_api_context* gqlite_api_context_t;
typedef struct gqlite_connection* gqlite_connection_t;
typedef struct gqlite_backend* gqlite_backend_t;
typedef struct gqlite_value* gqlite_value_t;

gqlite_api_context_t gqlite_api_context_create();
void gqlite_api_context_destroy(gqlite_api_context_t);
const char* gqlite_api_context_get_message(gqlite_api_context_t);
bool gqlite_api_context_has_error(gqlite_api_context_t);
void gqlite_api_context_clear_error(gqlite_api_context_t);

/**
 * Create a connection, using the sqlite backend. Expect as argument an handle to a sqlite connection.
 */
gqlite_connection_t gqlite_connection_create_from_sqlite(gqlite_api_context_t, void*);

gqlite_connection_t gqlite_connection_create_from_sqlite_file(gqlite_api_context_t, const char*);

/**
 * Destroy the connection. Does not delete any connection handle passed as an argument.
 */
void gqlite_connection_destroy(gqlite_api_context_t, gqlite_connection_t);

/**
 * Execute an OpenCypher query on the connection.
 */
gqlite_value_t gqlite_connection_oc_query(gqlite_api_context_t, gqlite_connection_t, const char*, gqlite_value_t);

/**
 * Create a value object to use in a query.
 */
gqlite_value_t gqlite_value_create(gqlite_api_context_t);
void gqlite_value_destroy(gqlite_api_context_t, gqlite_value_t);
const char* gqlite_value_to_json(gqlite_api_context_t, gqlite_value_t);
bool gqlite_value_is_valid(gqlite_api_context_t, gqlite_value_t);

#ifdef __cplusplus
}
#endif